Dependencies/eth32_files_2.04/examples/buttons/c/eth32.h

// Data type for handle to the ETH32 device
typedef void *eth32;


int CALLCONVENTION CALLEXTRA eth32_set_pwm_parameters(eth32 handle, int channel, int state, float freq, float duty);

int CALLCONVENTION CALLEXTRA eth32_get_pwm_parameters(eth32 handle, int channel, int *state, float *freq, float *duty);


int CALLCONVENTION CALLEXTRA eth32_get_eeprom(eth32 handle, int address, int length, void *buffer);

int CALLCONVENTION CALLEXTRA eth32_set_eeprom(eth32 handle, int address, int length, void *buffer);


const char * CALLCONVENTION CALLEXTRA eth32_error_string(int errorcode);


int CALLCONVENTION CALLEXTRA eth32_close(eth32 handle);

// Plugin types
#define ETH32CFG_PLUG_NONE      0
#define ETH32CFG_PLUG_SYS       1
#define ETH32CFG_PLUG_PCAP      2

// Interface name types that can be retrieved from the eth32cfg_plugin_interface_name function
#define ETH32CFG_IFACENAME_STANDARD     0
#define ETH32CFG_IFACENAME_FRIENDLY     1
#define ETH32CFG_IFACENAME_DESCRIPTION  2

// Network interface types
#define ETH32CFG_IFTYPE_NONE        0
#define ETH32CFG_IFTYPE_OTHER       1
#define ETH32CFG_IFTYPE_ETHERNET    6
#define ETH32CFG_IFTYPE_TOKENRING   9
#define ETH32CFG_IFTYPE_FDDI       15
#define ETH32CFG_IFTYPE_PPP        23
#define ETH32CFG_IFTYPE_LOOPBACK   24
#define ETH32CFG_IFTYPE_SLIP       28

// Flags for eth32cfg_discover_ip function
#define ETH32CFG_FILTER_NONE        0
#define ETH32CFG_FILTER_MAC         1
#define ETH32CFG_FILTER_SERIAL      2

typedef void *eth32cfg; // Data type for handle to ETH32 config data information
typedef void *eth32cfgiflist; // Data type for handle to network interface list


// Some languages always align their structures on 4-byte boundaries,
// so this structure includes that.
typedef struct
{
	unsigned char product_id;
	unsigned char firmware_major;
	unsigned char firmware_minor;
	unsigned char config_enable;
	unsigned char mac[8]; // 8 to make alignment right, only need 6 though
	unsigned short serialnum_batch;
	unsigned short serialnum_unit; 
	eth32cfg_ip_t config_ip;
	eth32cfg_ip_t config_gateway;
	eth32cfg_ip_t config_netmask;
	eth32cfg_ip_t active_ip;
	eth32cfg_ip_t active_gateway;
	eth32cfg_ip_t active_netmask;
	unsigned char dhcp;

} eth32cfg_data_t;


int CALLCONVENTION CALLEXTRA eth32cfg_ip_to_string(const eth32cfg_ip_t *ipbinary, char *ipstring); // ipstring buffer MUST be at least 16 bytes long
int CALLCONVENTION CALLEXTRA eth32cfg_string_to_ip(const char *ipstring, eth32cfg_ip_t *ipbinary);


eth32cfg CALLCONVENTION CALLEXTRA eth32cfg_query(eth32cfg_ip_t *bcastaddr, int *number, int *result);

eth32cfg CALLCONVENTION CALLEXTRA eth32cfg_discover_ip(eth32cfg_ip_t *bcastaddr, unsigned int flags, unsigned char *mac, unsigned char product_id, unsigned short serialnum_batch, unsigned short serialnum_unit, int *number, int *result);

int CALLCONVENTION CALLEXTRA eth32cfg_get_config(eth32cfg handle, int index, eth32cfg_data_t *dataptr);

int CALLCONVENTION CALLEXTRA eth32cfg_set_config(eth32cfg_ip_t *bcastaddr, eth32cfg_data_t *dataptr);

int CALLCONVENTION CALLEXTRA eth32cfg_serialnum_string(unsigned char product_id, unsigned short batch, unsigned short unit, char *serialstring, int bufsize);

void CALLCONVENTION CALLEXTRA eth32cfg_free(eth32cfg handle);



int CALLCONVENTION CALLEXTRA eth32cfg_plugin_load(int option);

eth32cfgiflist CALLCONVENTION CALLEXTRA eth32cfg_plugin_interface_list(int *numd, int *result);

int CALLCONVENTION CALLEXTRA eth32cfg_plugin_interface_address(eth32cfgiflist handle, int index, eth32cfg_ip_t *ip, eth32cfg_ip_t *netmask);

int CALLCONVENTION CALLEXTRA eth32cfg_plugin_interface_type(eth32cfgiflist handle, int index, int *type);

int CALLCONVENTION CALLEXTRA eth32cfg_plugin_interface_name(eth32cfgiflist handle, int index, int nametype, char *name, int *length);

int CALLCONVENTION CALLEXTRA eth32cfg_plugin_choose_interface(eth32cfgiflist handle, int index);

void CALLCONVENTION CALLEXTRA eth32cfg_plugin_interface_list_free(eth32cfgiflist handle);





// ###########################################################
//      Error Codes
// ###########################################################

#define ETH_SUCCESS                   0   // No error
#define ETH_GENERAL_ERROR            -1   // Unknown or other error
#define ETH_CLOSING                  -2   // Function aborted since the device is being closed
#define ETH_NETWORK_ERROR            -10  // unable to open, read, or write to the network socket
#define ETH_THREAD_ERROR             -11  // General error ocurred in the threads library used by this API.
#define ETH_NOT_SUPPORTED            -12  // returned if functionality is not supported by platform or device
#define ETH_PIPE_ERROR               -13  // Internal API error
#define ETH_RTHREAD_ERROR            -14  // Internal API error
#define ETH_ETHREAD_ERROR            -15  // Internal API error
#define ETH_MALLOC_ERROR             -16  // Problem involving allocating memory
#define ETH_WINDOWS_ERROR            -17  // Internal API error - specific to Windows platform
#define ETH_WINSOCK_ERROR            -18  // Internal API error - specific to Windows sockets
#define ETH_NETWORK_INTR             -19  // Network read/write operation was interrupted.
#define ETH_WRONG_MODE               -20  // Something is not configured correctly in order to allow this functionality.
#define ETH_BCAST_OPT                -21  // Error setting SO_BROADCAST option on socket
#define ETH_REUSE_OPT                -22  // Error setting SO_REUSEADDR option on socket
#define ETH_CFG_NOACK                -23  // Really a warning - no acknowledgement after configuring IP settings of device
#define ETH_CFG_REJECT               -24  // The device refused to set its IP configuration settings
#define ETH_LOADLIB                  -25  // Error loading an external DLL library
#define ETH_PLUGIN                   -26  // General error with plugin being used (for device discovery, sniffing, etc)
#define ETH_BUFSIZE                  -27  // A buffer provided is either invalid size or too small
#define ETH_INVALID_HANDLE          -101  // Invalid device handle was passed in
#define ETH_INVALID_PORT            -104  // Port specified is invalid for the device model
#define ETH_INVALID_BIT             -109  // Value passed identifying bit is out of range
#define ETH_INVALID_CHANNEL         -111  // Invalid channel number specified
#define ETH_INVALID_POINTER         -112  // Invalid pointer given as a parameter to an API function
#define ETH_INVALID_OTHER           -113  // Some parameter passed to an API function was invalid or out of range
#define ETH_INVALID_VALUE           -114  // Value out of possible range for that I/O port
#define ETH_INVALID_IP              -115  // Invalid IP address was provided
#define ETH_INVALID_NETMASK         -116  // Invalid netmask was provided
#define ETH_INVALID_INDEX           -117  // Invalid index value
#define ETH_TIMEOUT                 -201  // Timeout ocurred. Most likely communication has been lost w/ device	