Dependencies/eth32_files_2.04/api/windows/vb6/eth32.bas


Public Declare Function eth32_set_pwm_parameters Lib "eth32api.dll" (ByVal handle As Long, ByVal channel As Long, ByVal state As Long, ByVal freq As Single, ByVal duty As Single) As Long
Public Declare Function eth32_get_pwm_parameters Lib "eth32api.dll" (ByVal handle As Long, ByVal channel As Long, ByRef state As Long, ByRef freq As Single, ByRef duty As Single) As Long

Public Declare Function eth32_get_eeprom Lib "eth32api.dll" (ByVal handle As Long, ByVal address As Long, ByVal length As Long, ByRef buffer As Byte) As Long
Public Declare Function eth32_set_eeprom Lib "eth32api.dll" (ByVal handle As Long, ByVal address As Long, ByVal length As Long, ByRef buffer As Byte) As Long

Public Declare Function eth32_error_string Lib "eth32api.dll" (ByVal errorcode As Long) As Long

Public Declare Function eth32_close Lib "eth32api.dll" (ByVal handle As Long) As Long

'************************************************
' Functions/Definitions for ETH32 Configuration functionality
'************************************************
Public Type eth32cfg_mac
    buf(5) As Byte
End Type

Public Type eth32cfg_ip
    buf(3) As Byte
End Type


Public Type eth32cfg_data
    product_id As Byte
    firmware_major As Byte
    firmware_minor As Byte
    config_enable As Byte
    mac As eth32cfg_mac
    pad1 As Byte ' mac needs to occupy 8 bytes in structure, so add two padding bytes
    pad2 As Byte
    serialnum_batch As Integer
    serialnum_unit As Integer
    config_ip As eth32cfg_ip
    config_gateway As eth32cfg_ip
    config_netmask As eth32cfg_ip
    active_ip As eth32cfg_ip
    active_gateway As eth32cfg_ip
    active_netmask As eth32cfg_ip
    dhcp As Byte
End Type



Public Enum Eth32ConfigPluginType
    ETH32CFG_PLUG_NONE = 0
    ETH32CFG_PLUG_SYS = 1
    ETH32CFG_PLUG_PCAP = 2
End Enum

Public Enum Eth32ConfigInterfaceName
    ETH32CFG_IFACENAME_STANDARD = 0
    ETH32CFG_IFACENAME_FRIENDLY = 1
    ETH32CFG_IFACENAME_DESCRIPTION = 2
End Enum

Public Enum Eth32ConfigInterfaceType
    ETH32CFG_IFTYPE_NONE = 0
    ETH32CFG_IFTYPE_OTHER = 1
    ETH32CFG_IFTYPE_ETHERNET = 6
    ETH32CFG_IFTYPE_TOKENRING = 9
    ETH32CFG_IFTYPE_FDDI = 15
    ETH32CFG_IFTYPE_PPP = 23
    ETH32CFG_IFTYPE_LOOPBACK = 24
    ETH32CFG_IFTYPE_SLIP = 28
End Enum

Public Enum Eth32ConfigFilter
    ETH32CFG_FILTER_NONE = 0
    ETH32CFG_FILTER_MAC = 1
    ETH32CFG_FILTER_SERIAL = 2
End Enum

Public Type Eth32ConfigPluginInterface
    ip As eth32cfg_ip
    netmask As eth32cfg_ip
    InterfaceType As Eth32ConfigInterfaceType
    StandardName As String
    FriendlyName As String
    Description As String
End Type

Public Declare Function eth32cfg_ip_to_string Lib "eth32api.dll" (ipbinary As eth32cfg_ip, ByVal ipstring As String) As Long
Public Declare Function eth32cfg_string_to_ip Lib "eth32api.dll" (ByVal ipstring As String, ipbinary As eth32cfg_ip) As Long

Public Declare Function eth32cfg_query Lib "eth32api.dll" (bcastaddr As eth32cfg_ip, ByRef number As Long, ByRef Result As Long) As Long
Public Declare Function eth32cfg_discover_ip Lib "eth32api.dll" (bcastaddr As eth32cfg_ip, ByVal flags As Long, macaddr As eth32cfg_mac, ByVal product_id As Byte, ByVal serialnum_batch As Integer, ByVal serialnum_unit As Integer, ByRef number As Long, ByRef Result As Long) As Long
Public Declare Function eth32cfg_get_config Lib "eth32api.dll" (ByVal handle As Long, ByVal index As Long, ByRef data As eth32cfg_data) As Long
Public Declare Function eth32cfg_set_config Lib "eth32api.dll" (bcastaddr As eth32cfg_ip, data As eth32cfg_data) As Long
Public Declare Function eth32cfg_serialnum_string Lib "eth32api.dll" (ByVal product_id As Byte, ByVal batch As Integer, ByVal unit As Integer, ByVal serialstring As String, ByVal bufsize As Long) As Long
Public Declare Sub eth32cfg_free Lib "eth32api.dll" (ByVal handle As Long)

Public Declare Function eth32cfg_plugin_load Lib "eth32api.dll" (ByVal pluginoption As Long) As Long
Public Declare Function eth32cfg_plugin_interface_list Lib "eth32api.dll" (ByRef numd As Long, ByRef Result As Long) As Long
Public Declare Function eth32cfg_plugin_interface_address Lib "eth32api.dll" (ByVal handle As Long, ByVal index As Long, ByRef ipaddr As eth32cfg_ip, ByRef netmask As eth32cfg_ip) As Long
Public Declare Function eth32cfg_plugin_interface_type Lib "eth32api.dll" (ByVal handle As Long, ByVal index As Long, ByRef devtype As Long) As Long
Public Declare Function eth32cfg_plugin_interface_name Lib "eth32api.dll" (ByVal handle As Long, ByVal index As Long, ByVal nametype As Long, ByVal name As String, ByRef length As Long) As Long
Public Declare Function eth32cfg_plugin_choose_interface Lib "eth32api.dll" (ByVal handle As Long, ByVal index As Long) As Long
Public Declare Sub eth32cfg_plugin_interface_list_free Lib "eth32api.dll" (ByVal handle As Long)



'************************************************
' Windows API function declarations
'************************************************
Public Declare Function mod_eth32_lstrcpy Lib "kernel32" Alias "lstrcpyA" (ByVal lpString1 As String, ByVal lpString2 As Long) As Long
Public Declare Function mod_eth32_lstrlen Lib "kernel32" Alias "lstrlenA" (ByVal lpString As Long) As Long
Public Declare Function mod_eth32_GetWindowLong Lib "user32" Alias "GetWindowLongA" (ByVal hwnd As Long, ByVal nIndex As Long) As Long
Public Declare Sub mod_eth32_copymemory Lib "kernel32" Alias "RtlMoveMemory" (dest As Any, src As Any, ByVal length As Long)

' Windows API constants
Public Const mod_eth32_WM_COMMAND = &H111
Public Const mod_eth32_GWL_ID = (-12)


Public Const ETH_SUCCESS    As Long = 0                  ' No error
Public Const ETH_GENERAL_ERROR   As Long = -1            ' Unknown or other error
Public Const ETH_CLOSING        As Long = -2             ' Function aborted since the device is being closed
Public Const ETH_NETWORK_ERROR    As Long = -10          ' unable to open, read, or write to the network socket
Public Const ETH_THREAD_ERROR    As Long = -11           ' General error ocurred in the threads library used by this API.
Public Const ETH_NOT_SUPPORTED    As Long = -12          ' returned if an API function is not supported by a device
Public Const ETH_PIPE_ERROR       As Long = -13          ' Internal API error
Public Const ETH_RTHREAD_ERROR     As Long = -14         ' Internal API error
Public Const ETH_ETHREAD_ERROR    As Long = -15          ' Internal API error
Public Const ETH_MALLOC_ERROR   As Long = -16            ' Problem involving allocating memory
Public Const ETH_WINDOWS_ERROR    As Long = -17          ' Internal API error - specific to Windows platform
Public Const ETH_WINSOCK_ERROR   As Long = -18           ' Internal API error - specific to Windows sockets
Public Const ETH_NETWORK_INTR    As Long = -19           ' Network read/write operation was interrupted.
Public Const ETH_WRONG_MODE     As Long = -20            ' Something is not configured correctly in order to allow this functionality.
Public Const ETH_BCAST_OPT      As Long = -21            ' Error setting SO_BROADCAST option on socket
Public Const ETH_REUSE_OPT      As Long = -22            ' Error setting SO_REUSEADDR option on socket
Public Const ETH_CFG_NOACK      As Long = -23            ' Really a warning - no acknowledgement after configuring IP settings of device
Public Const ETH_CFG_REJECT     As Long = -24            ' The device refused to set its IP configuration settings
Public Const ETH_LOADLIB        As Long = -25            ' Error loading an external DLL library
Public Const ETH_PLUGIN         As Long = -26            ' General error with plugin being used (for device discovery, sniffing, etc)
Public Const ETH_BUFSIZE        As Long = -27            ' A buffer provided is either invalid size or too small
Public Const ETH_INVALID_HANDLE As Long = -101         ' Invalid device handle was passed in
Public Const ETH_INVALID_PORT   As Long = -104          ' Port specified is invalid for the device model
Public Const ETH_INVALID_BIT    As Long = -109           ' Value passed identifying bit is out of range
Public Const ETH_INVALID_CHANNEL As Long = -111       ' Invalid channel number specified
Public Const ETH_INVALID_POINTER As Long = -112          ' Invalid pointer given as a parameter to an API function
Public Const ETH_INVALID_OTHER   As Long = -113          ' Some parameter passed to an API function was invalid or out of range
Public Const ETH_INVALID_VALUE   As Long = -114          ' Value out of possible range for that I/O port
Public Const ETH_INVALID_IP      As Long = -115          ' Invalid IP address was provided
Public Const ETH_INVALID_NETMASK As Long = -116          ' Invalid netmask was provided
Public Const ETH_INVALID_INDEX   As Long = -117          ' Invalid index value
Public Const ETH_TIMEOUT       As Long = -201            ' Timeout ocurred. Most likely communication has been lost w/ device


' ===========================
' Definitions to support the VB Class

' When raising errors, VB requires an offset to be added to the error numbers
' to avoid conflicts.  Define the offset here.
Public Const EthErrorOffset As Long = vbObjectError + 512

' Define the error codes used in the VB Class.
' In order to work better with the VB Error system, positive error codes
' are used instead of the negative codes used by the ETH32 API, so notice
' the minus sign on all these.  After the API-defined error codes, we also
' define any codes that are internal to the VB class
Public Enum EthError
    EthErrorNone = 0  ' No Error
    EthErrorGeneral = EthErrorOffset - ETH_GENERAL_ERROR
    EthErrorClosing = EthErrorOffset - ETH_CLOSING
    EthErrorNetwork = EthErrorOffset - ETH_NETWORK_ERROR
    EthErrorThread = EthErrorOffset - ETH_THREAD_ERROR
    EthErrorNotSupported = EthErrorOffset - ETH_NOT_SUPPORTED
    EthErrorPipe = EthErrorOffset - ETH_PIPE_ERROR
    EthErrorRthread = EthErrorOffset - ETH_RTHREAD_ERROR
    EthErrorEthread = EthErrorOffset - ETH_ETHREAD_ERROR
    EthErrorMalloc = EthErrorOffset - ETH_MALLOC_ERROR
    EthErrorWindows = EthErrorOffset - ETH_WINDOWS_ERROR
    EthErrorWinsock = EthErrorOffset - ETH_WINSOCK_ERROR
    EthErrorNetworkIntr = EthErrorOffset - ETH_NETWORK_INTR
    EthErrorWrongMode = EthErrorOffset - ETH_WRONG_MODE
    EthErrorBcastOpt = EthErrorOffset - ETH_BCAST_OPT
    EthErrorReuseOpt = EthErrorOffset - ETH_REUSE_OPT
    EthErrorConfigNoack = EthErrorOffset - ETH_CFG_NOACK
    EthErrorConfigReject = EthErrorOffset - ETH_CFG_REJECT
    EthErrorLoadlib = EthErrorOffset - ETH_LOADLIB
    EthErrorPlugin = EthErrorOffset - ETH_PLUGIN
    EthErrorBufsize = EthErrorOffset - ETH_BUFSIZE
    EthErrorInvalidHandle = EthErrorOffset - ETH_INVALID_HANDLE
    EthErrorInvalidPort = EthErrorOffset - ETH_INVALID_PORT
    EthErrorInvalidBit = EthErrorOffset - ETH_INVALID_BIT
    EthErrorInvalidChannel = EthErrorOffset - ETH_INVALID_CHANNEL
    EthErrorInvalidPointer = EthErrorOffset - ETH_INVALID_POINTER
    EthErrorInvalidOther = EthErrorOffset - ETH_INVALID_OTHER
    EthErrorInvalidValue = EthErrorOffset - ETH_INVALID_VALUE
    EthErrorInvalidIp = EthErrorOffset - ETH_INVALID_IP
    EthErrorInvalidNetmask = EthErrorOffset - ETH_INVALID_NETMASK
    EthErrorInvalidIndex = EthErrorOffset - ETH_INVALID_INDEX
    EthErrorTimeout = EthErrorOffset - ETH_TIMEOUT
    
    ' ========================
    ' Error codes for the VB class - these are not defined by the ETH32 API
    EthErrorAlreadyConnected = EthErrorOffset + 1000
    EthErrorNotConnected = EthErrorOffset + 1001
    
End Enum


' The number at which the VB Class error codes begin
Public Const EthErrorVBClass As Long = 1000

